# ocaml-corebuild-skeleton

./: .merlin  .ocamlinit  README.md  _oasis  _tags  blah.opam
lib/: blah.ml  blah.mli  jbuild
opam/: descr  opam
test/: jbuild  test_blah.ml
